# SystemF

./: .gitignore  BNF.txt  Parser.hs  README.md  SystemF.cabal  main.py
eval/: convert.py  eval.py  execute.py  node.py  shift.py  subst.py  term.py  ty.py  type.py  typing.py
parser/: Parser.hs  Syntax.hs
parser-exec/: Main.hs
src-hs/: Syntax.hs
src-hs-exec/: Main.hs
tests/: test_eval.py
