name:                SystemF
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Yuu Igarashi
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src-hs
  exposed-modules:     Parser
                     , Syntax
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable parse
  hs-source-dirs:      src-hs-exec
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SystemF
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-hs
  main-is:             Spec.hs
  build-depends:       base
                     , SystemF
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
