name:                SystemF
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Yuu Igarashi
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src-hs
  exposed-modules:     Parser
                     , Syntax
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , bytestring
                     , aeson
  default-language:    Haskell2010

executable parse
  hs-source-dirs:      src-hs-exec
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SystemF
  default-language:    Haskell2010